--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,7 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
 RewriteRule ^(.+)$ index.php?url=$1
+ <IfModule mod_headers.c>
+   Header set Access-Control-Allow-Origin "*"
+   
+ </IfModule>
